(bug 67713) More options icon is misaligned
I didn't want to touch HTML in order to change where the icon appears.

I originally wanted to use a transparent border instead of the padding, to get
top (& bottom) padding that the menu icon would then stay inside of. That didn't
work out because of the inset box-shadow.

So just changing the absolute position here seemed like the best idea. Not sure
if it's supposed to be in menu.less of titlebar.less, but the latter seemed the
most fitting.

Bug: 67713

--- a/modules/new/styles/board/topic/titlebar.less
+++ b/modules/new/styles/board/topic/titlebar.less
@@ -28,6 +28,13 @@
 	}
 }
 
+// flow-topic-titlebar has some padding & .flow-menu's absolute positioning in
+// top: 0; would make it appear at the exact top of the container, but we want
+// it inside titlebar's top padding (aligned with topic title)
+.client-js .flow-topic-titlebar .flow-menu {
+	top: 1em;
+}
+
 .flow-moderated-topic-title,
 // Override default Vector styles
 div#content h2.flow-topic-title {
